# extensible-module-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
common/: cfg_utils.hpp  function_block.hpp  thread_utils.hpp
common/proto/: stdmsg.pb.cc  stdmsg.pb.h  stdmsg.proto  stdmsg.py
configfiles/: localization.ini
configfiles/prototxt/: agv.prototxt  test.prototxt
data_reader/: CMakeLists.txt  proto_data_reader.cpp  proto_data_reader.hpp
data_sender/: CMakeLists.txt  sender.cpp  sender.hpp
gui-test/: bug.txt  component-0.py  component.py  gui.py  mapping_point.ini  navigation-0.ui  navigation.ui  origin.txt  origin1.txt  origin2.txt
module/AGVToolKit/: CMakeLists.txt  ReflectorDetector.cpp  ReflectorDetector.hpp  reflector_utils.hpp
module/AGVToolKit/configs/: AGVToolKit.prototxt
module/data_reader/: CMakeLists.txt  data_reader.cpp  data_reader.hpp
module/data_sender/: CMakeLists.txt  data_sender.cpp  data_sender.hpp
module/recoder/: recoder.hpp
module/reflector_slam/: CMakeLists.txt  ReflectorSLAM.cpp  ReflectorSLAM.h  configfile.cpp  configfile.h  function_block.hpp  rpc_utils.hpp  stdmsg.pb.cc  stdmsg.pb.h
module/reflector_slam/cmake/: FindEigen.cmake
module/sensor/: CMakeLists.txt  laser.cpp  laser.hpp  odometry.cpp  odometry.hpp
module/sensor/net/: sockets.cpp  sockets.hpp
module/sensor/serial/: serial.cc  serial.h  unix_win.cc  unix_win.h
proto/: stdmsg.pb.cc  stdmsg.pb.h  stdmsg.proto  stdmsg.py
prototxt/: localizer_debug.prototxt  test.prototxt
recoder/: recoder.hpp
rpc_test/: CMakeLists.txt
sensor/: laser.cpp  laser.hpp
system/: CMakeLists.txt  function_block.cpp  function_block.hpp  io.cpp  io.hpp  main.cpp  msg_parser.hpp  system.cpp  system.hpp
system/src/: CMakeLists.txt  io.cpp  io.hpp  main.cpp  node.cpp  node.hpp  system.cpp
utils/: configfile.cpp  msg_parser.hpp
